[package]
name = "pwatrip-twenty48-backend"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pwatrip_twenty_48_backend"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
engine = { path = "../engine" }
futures = "0.3"
form_urlencoded = "1.0"
once_cell = "1.9.0"
pwatrip-twenty48-state = { path = "../state/rust" }
route-recognizer = "0.3.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
wasmbus-rpc = "0.6"
wasmcloud-interface-httpserver = "0.3"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
