[package]
name = "engine"
version = "0.1.0"
authors = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindgen = ["wasm-bindgen", "console_error_panic_hook"]
random = ["nanorand", "uuid"]

[dependencies]
nanorand = { version = "0.6.1", features = ["getrandom"], optional = true }
oorandom = "11.1.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"], optional = true }
wasm-bindgen = { version = "0.2.63", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
