[package]
name = "pwatrip-twenty48-state-mysql"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
chrono = "0.4.19"
log = "0.4"
mysql_async = "0.29.0"
mysql_common = { version = "0.28.0", features = ["chrono"] }
pwatrip-twenty48-state = { path = "../state/rust" }
unwrap_or = "1.0.0"
uuid = { version = "0.8.2", features = ["v4"] }
wasmbus-rpc = "0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.1"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "pwatrip_twenty_48_state_mysql"
path = "src/main.rs"
